# Lima-camera-ximea

./: .gitlab-ci.yml  CMakeLists.txt  README.md
cmake/: FindSDK.cmake  FindxiApi.cmake  PROJECTConfig.cmake.in  configure_link_libs.cmake  project_version.cmake
conda/: bd.bat  conda_build_config.yaml  meta.yaml
conda/camera/: bld.bat  build.sh  meta.yaml
conda/tango/: bld.bat  build.sh  meta.yaml
doc/: index.rst  tango.rst
include/: MagicNumbers.h  MyCameraCamera.h  MyCameraInterface.h  XimeaAcqThread.h  XimeaBinCtrlObj.h  XimeaCamera.h  XimeaDetInfoCtrlObj.h  XimeaEventCtrlObj.h  XimeaFrameGetter.h  XimeaInterface.h  XimeaRoiCtrlObj.h  XimeaSyncCtrlObj.h  XimeaVideoCtrlObj.h  xiXCamera.h  xiXInterface.h
python/: MyCamera.py  Ximea.py  __init__.py  xiX.py
sip/: MyCameraCamera.sip  MyCameraInterface.sip  XimeaCamera.sip  XimeaInterface.sip  xiXCamera.sip  xiXInterface.sip
src/: MyCameraCamera.cpp  MyCameraInterface.cpp  XimeaAcqThread.cpp  XimeaBinCtrlObj.cpp  XimeaCamera.cpp  XimeaDetInfoCtrlObj.cpp  XimeaEventCtrlObj.cpp  XimeaInterface.cpp  XimeaRoiCtrlObj.cpp  XimeaSyncCtrlObj.cpp  XimeaVideoCtrlObj.cpp  xiXCamera.cpp  xiXInterface.cpp
tango/: CMakeLists.txt  Ximea.py
tests/: HOWTO_RUNTESTS  conftest.py  test_ximea.py
